# pecs-multi-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXPERIMENT.md  GIT_REBUILD_GUIDE.md  LICENSE  README.md  STATUS_AND_PLAN.md  app.py  config.py  docker-compose.yml  probe_env.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run_gaia_full.py  run_gaia_official.py  run_real_baseline.py  run_resumable.py  run_webshop.py
ablation_configs/: critic_no_reflect.yaml  full_pecs.yaml  no_critic.yaml  no_synthesizer.yaml  single_agent.yaml  synthesizer_no_replan.yaml
agents/: critic.py  executor.py  heuristics.py  llm_utils.py  planner.py  synthesizer.py
benchmarks/: ablation_eval.py  complex_tasks.py  cost_eval.py  eval_autogen.py  eval_crewai.py  gaia_eval.py  gaia_official.py  react_baseline.py  report.py  webshop_eval.py
data/: employees.csv  sales_data.xlsx
datasets/: base_dataset.py  gaia_mock_dataset.py  gaia_official_dataset.py  webshop_mock_dataset.py
demos/: custom_critic_override_demo.py  demo_batch_task.py  pecs_vs_react_demo.py  quickstart_no_api.py  security_sandbox_demo.py  token_budget_demo.py
docs/: AI_ASSISTANT_PROMPT.md  EXEC_GUIDE_NO_PITFALLS.md  FAILURE_CASES.md  FEEDBACK.md  FIX_PLAN.md  GAIA_RERUN_PROMPT.md  GAIA_SCORE_UPGRADE_SPEC.md  INTERVIEW_QA.md  LOCAL_EXEC_CHECKLIST.md  MONITORING.md  NEXT_STEPS_PLAN.md  PRD.md  QUICKSTART_webshop_routeA.md  SECURITY_AUDIT.md  TECHNICAL_REPORT.md  docker_install_windows.md  lingshucode_setup.md  testing.md  webshop_full_runbook.md  webshop_local_checklist.md  webshop_local_runbook.md  webshop_real_env_setup.md
examples/: basic_usage.py  custom_tool.py
experiments/: config.yaml
graph/: builder.py  state.py  token_budget.py
scripts/: api.py  (+10 more)
(+62 files in other folders)
