[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "langgraph-multi-agent"
version = "1.0.0"
description = "LangGraph 多智能体协作框架 — Planner/Executor/Critic/Synthesizer 四角色分工 + Token 预算感知调度 + AST 安全沙箱"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "paopao-13" },
]
keywords = ["langgraph", "multi-agent", "llm", "deepseek", "gaia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "flask>=3.0.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/paopao-13/langgraph-multi-agent"
"Repository" = "https://github.com/paopao-13/langgraph-multi-agent"
"Bug Tracker" = "https://github.com/paopao-13/langgraph-multi-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "tools*", "benchmarks*", "tests*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
